Fix alignment

--- a/css/app.css
+++ b/css/app.css
@@ -72,10 +72,10 @@ input::-webkit-inner-spin-button {
 	width: 100%;
 	height: 100%;
 	background: url(../img/bg.jpg) no-repeat center center; 
-  	-webkit-background-size: cover;
-  	-moz-background-size: cover;
-  	-o-background-size: cover;
-  	background-size: cover;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -246,10 +246,6 @@ a.arrow > svg {
 
 .download a:hover{
 	opacity: 1;
-}
-
-.download .row{
-	max-width: 368px;
 }
 
 ::-webkit-scrollbar {
